--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
+    "node-cache": "^5.1.0",
     "request": "^2.87.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "rn-proxy-cache": "^0.10.2"
   }
 }
