--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Michael Purnell",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
     "node-cache": "^5.1.0",
